wrapping function with type check, fixing centering of icon buttons

--- a/src/assets/stylesheets/components/_button.scss
+++ b/src/assets/stylesheets/components/_button.scss
@@ -42,10 +42,8 @@ $button-color: $color-blue;
 
   button,
   a {
-    display: block;
     width: 3.2em;
     height: 3.2em;
-    line-height: 3.2em;
     text-align: center;
     padding: 0;
 
