--- a/src/assets/stylesheets/components/_mod-input.scss
+++ b/src/assets/stylesheets/components/_mod-input.scss
@@ -26,13 +26,11 @@ $mod-input-button-size: 2.4em;
 
     width: $mod-input-button-size;
     height: $mod-input-button-size;
-    line-height: $mod-input-button-size;
     margin-left: 1em;
 
     button {
       width: $mod-input-button-size;
       height: $mod-input-button-size;
-      line-height: $mod-input-button-size;
       border: solid 2px transparent;
     }
 
